<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.ActivityLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/xxhdpi_20"
        android:layout_marginTop="@dimen/xxhdpi_30">

        <TextView
            android:id="@+id/login_welcon_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome to"
            android:textColor="@color/black"
            android:textSize="@dimen/t_xxh_30"
            android:fontFamily="@font/clanpro_book"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Speant Delivery"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/t_xxh_30"
            android:layout_marginTop="@dimen/xxhdpi_10"
            android:fontFamily="@font/clanpro_bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/xxhdpi_30"
            android:layout_marginTop="@dimen/xxhdpi_10"
            android:text="@string/login_note"
            android:textColor="@color/grey"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textSize="@dimen/t_xxh_16" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/xxhdpi_20"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="false"
                app:ccp_textSize="14sp"
                android:layout_marginTop="@dimen/xxhdpi_5"
                card_view:ccp_defaultPhoneCode="91" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/login_mail_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:imeOptions="actionNext"
                    android:maxLength="10"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/t_xxh_20" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_pswd_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xxhdpi_10"
            android:layout_marginRight="@dimen/xxhdpi_10"
            android:layout_marginTop="@dimen/xxhdpi_20"
            android:fastScrollEnabled="true"
            card_view:cardCornerRadius="3dp">

            <TextView
                android:id="@+id/login_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:text="Login"
                android:textSize="@dimen/t_xxh_20"
                android:fontFamily="@font/sourcesanspro_regular"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:gravity="center"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/login_forget_pswd_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password ?"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/t_xxh_16"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textColor="@color/black"/>

    </LinearLayout>

    <TextView
        android:id="@+id/login_no_acc_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="@dimen/xxhdpi_10"
        android:visibility="gone"
        android:text="Don't Have Account? Signup"
        android:textColor="@color/white"
        android:textSize="@dimen/t_xxh_18" />

</RelativeLayout>